# odb

./: .gitignore  INSTALL  LICENSE  Makefile.am  NCUEL  NEWS  PACKAGE-README.md  README  README-GIT  README.md  bootstrap  build.bat  buildfile  configure.ac  database-options.testscript  libodb-boost.pc.in  libodb-mssql-vc10.sln  libodb-mssql-vc11.sln  libodb-mssql-vc12.sln  libodb-mssql-vc8.sln  libodb-mssql-vc9.sln  libodb-mssql.pc.in  libodb-oracle-vc10.sln  libodb-oracle-vc11.sln  libodb-oracle-vc12.sln  libodb-oracle-vc8.sln  libodb-oracle-vc9.sln  libodb-oracle.pc.in  libodb-pgsql-vc12.sln  libodb-pgsql.pc.in  libodb-qt-vc11.sln  libodb-qt.pc.in  libodb-qt4-vc12.sln  libodb-qt5-vc12.sln  makefile  manifest  mssql-driver.bat  mysql-driver.bat  mysql-schema.testscript  mysql.options  (+7 more)
common/: Makefile.am  makefile  test.bat
common/access/: driver.cxx  makefile  test.hxx
common/as/: driver.cxx  makefile  test.hxx
common/auto/: driver.cxx  makefile  test.hxx
common/blob/: driver.cxx  makefile  test.hxx
common/bulk/: driver.cxx  makefile  test-pgsql-enabled.std  test.hxx  test.std
common/callback/: buildfile  driver.cxx  makefile  test.hxx  test.std  testscript
common/changelog/: add-column-mssql-diff.xml  add-column-mssql-patch.xml  add-column-mysql-diff.xml  add-column-mysql-patch.xml  add-column-oracle-diff.xml  add-column-pgsql-diff.xml  add-column-pgsql-patch.xml  add-column-sqlite-diff.xml  add-column-sqlite-patch.xml  add-column.hxx  add-foreign-key-mssql-diff.xml  add-foreign-key-mssql-patch.xml  add-foreign-key-mysql-diff.xml  add-foreign-key-mysql-patch.xml  add-foreign-key-oracle-diff.xml  add-foreign-key-oracle-patch.xml  add-foreign-key-pgsql-diff.xml  add-foreign-key-pgsql-patch.xml  add-foreign-key-sqlite-diff.xml  add-foreign-key-sqlite-patch.xml  add-foreign-key.hxx  add-index-mssql-diff.xml  add-index-mssql-patch.xml  add-index-mysql-diff.xml  add-index-mysql-patch.xml  add-index-oracle-diff.xml  add-index-oracle-patch.xml  add-index-pgsql-diff.xml  add-index-pgsql-patch.xml  add-index-sqlite-diff.xml  add-index-sqlite-patch.xml  add-index.hxx  add-table-mssql-diff.xml  add-table-mssql-patch.xml  add-table-mysql-diff.xml  add-table-mysql-patch.xml  add-table-oracle-diff.xml  add-table-oracle-patch.xml  add-table-pgsql-diff.xml  add-table-pgsql-patch.xml  (+65 more)
common/composite/: driver.cxx  makefile  test.hxx
common/composite-id/: driver.cxx  makefile  test.hxx
common/const/: driver.cxx  makefile  test.hxx
common/const-member/: driver.cxx  makefile  test.hxx  testscript
common/const-object/: buildfile  driver.cxx  makefile  test.hxx
common/container/: driver.cxx  makefile  test.hxx
common/ctor/: buildfile  driver.cxx  makefile  test.hxx
common/default/: driver.cxx  makefile  test.hxx
common/definition/: .gitignore  driver.cxx  makefile  test.hxx  time-mapping.hxx
common/enum/: buildfile  driver.cxx  makefile  test.hxx  testscript
common/erase-query/: driver.cxx  makefile  test.hxx
common/include/: driver.cxx  makefile  obj1.hxx  obj2.hxx  obj3.hxx  objs1.hxx  objs2.hxx  objs3.hxx  objs4.hxx  test1.hxx  test2.hxx  test3.hxx  test4.hxx
common/index/: buildfile  driver.cxx  makefile  test.hxx
common/inheritance/: driver.cxx  makefile  test.hxx
common/inverse/: buildfile  driver.cxx  makefile  test.hxx  tr1-memory.hxx
common/lazy-ptr/: buildfile  driver.cxx  makefile  test.hxx  tr1-memory.hxx
common/lifecycle/: driver.cxx  makefile  test.hxx
common/no-id/: buildfile  driver.cxx  makefile  test.hxx
common/object/: driver.cxx  makefile  test.hxx
common/optimistic/: driver.cxx  makefile  test.hxx
common/polymorphism/: driver.cxx  makefile  test.hxx  test1.hxx  test10.hxx  test11.hxx  test12.hxx  test2.hxx  test3.hxx  test4.hxx  test5.hxx  test6.hxx  test7.hxx  test8.hxx  test9.hxx
common/pragma/: driver.cxx  makefile  test.hxx  testscript
common/prepared/: driver.cxx  makefile  test.hxx
common/query/: driver.cxx  makefile  test.hxx  test.std  traits-mysql.hxx  traits-oracle.hxx  traits-pgsql.hxx  traits-sqlite.hxx  traits.hxx
common/readonly/: buildfile  driver.cxx  makefile  test.hxx
common/relationship/: driver.cxx  makefile  test.hxx  tr1-memory.hxx
common/relationship-query/: driver.cxx  makefile  test.hxx
common/schema/: driver.cxx  makefile  test.hxx
common/session/: driver.cxx  makefile  test.hxx
common/template/: Makefile.am  driver.cxx  makefile  template-vc10.vcxproj  template-vc10.vcxproj.filters  template-vc11.vcxproj  template-vc12.vcxproj  template-vc8.vcproj  template-vc9.vcproj  test.hxx
common/threads/: driver.cxx  makefile  test.hxx
common/transaction/: driver.cxx  makefile
common/types/: driver.cxx  makefile  test.hxx
common/view/: driver.cxx  makefile  test.hxx
common/virtual/: driver.cxx  makefile  test.hxx  testscript
common/wrapper/: driver.cxx  makefile  test.hxx
libcommon/common/: Makefile.am  buffer.hxx  common.cxx  common.hxx  common.txx  concrete.hxx  config-vc.h  config.h.in  config.hxx  export.hxx  libcommon-vc10.vcxproj  libcommon-vc11.vcxproj  libcommon-vc12.vcxproj  libcommon-vc12.vcxproj.filters  libcommon-vc8.vcproj  libcommon-vc9.vcproj  makefile  options.cli  options.cxx  options.hxx  options.ixx
mysql/template/: Makefile.am  driver.cxx  makefile  template-vc10.vcxproj  template-vc11.vcxproj  template-vc12.vcxproj  template-vc8.vcproj  template-vc9.vcproj  test.hxx
odb/mssql/: Makefile.am  auto-handle.cxx  auto-handle.hxx  binding.hxx  buildfile  connection-factory.cxx  connection-factory.hxx  connection.cxx  connection.hxx  connection.ixx  container-statements.hxx  container-statements.txx  database.cxx  database.hxx  database.ixx  error.cxx  error.hxx  exceptions.cxx  exceptions.hxx  forward.hxx  libodb-mssql-vc10.vcxproj  libodb-mssql-vc11.vcxproj  libodb-mssql-vc12.vcxproj  libodb-mssql-vc12.vcxproj.filters  libodb-mssql-vc8.vcproj  libodb-mssql-vc9.vcproj  makefile  mssql-fwd.hxx  mssql-types.hxx  mssql.hxx  no-id-object-result.hxx  no-id-object-result.txx  no-id-object-statements.hxx  no-id-object-statements.txx  object-result.hxx  (+57 more)
(+2644 files in other folders)
