# file      : common/Makefile.am
# author    : Boris Kolpackov <boris@codesynthesis.com>
# copyright : Copyright (c) 2009-2011 Code Synthesis Tools CC
# license   : GNU GPL v2; see accompanying LICENSE file

SUBDIRS = __path__(dirs)

if ODB_TESTS_THREADS
SUBDIRS += __path__(thread_dirs)
endif

EXTRA_DIST = __file__(extra_dist)
